k8s-manifests/api-gateway.yaml
# 1. Despliegue de la aplicación Spring Cloud Gateway
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: dev
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: gateway
        # REEMPLAZA con tu imagen de Docker personalizada que contiene tu jar de Spring
        image: api-gateway:1.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
---
# 2. Servicio para exponer el API Gateway
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: dev
spec:
  type: NodePort # Cambia a LoadBalancer si necesitas una IP pública externa
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 31351
    protocol: TCP
  selector:
    app: api-gateway
