k8s-manifests/auth-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: auth-postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres
  namespace: dev
spec:
  selector:
    app: auth-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
