k8s-manifests/facturacion-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facturacion-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facturacion-service
  template:
    metadata:
      labels:
        app: facturacion-service
    spec:
      containers:
        - name: facturacion-service
          image: facturacion-service:2.0
          imagePullPolicy: Never

          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: facturacion-service
  namespace: dev
spec:
  selector:
    app: facturacion-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
