k8s-manifests/facturacion-service2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facturacion-service
  namespace: facturacion
spec:
  replicas: 2
  selector:
    matchLabels:
      app: facturacion-service
  template:
    metadata:
      labels:
        app: facturacion-service
    spec:
      containers:
        - name: facturacion-service
          image: jesuscoto/facturacion-service:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: facturacion-service
  namespace: facturacion
spec:
  selector:
    app: facturacion-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
