k8s-manifests/login-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-app
  namespace: dev
  labels:
    app: login-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: login-app
  template:
    metadata:
      labels:
        app: login-app
    spec:
      containers:
      - name: login-app
        image: login-app:2.0 # Tu imagen de Docker
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend-service
  namespace: dev
spec:
  type: NodePort # Usa LoadBalancer si estás en la nube y quieres una IP pública directa
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: login-app
