k8s-manifests/postgress-facturacion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facturacion-db
  namespace: facturacion
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: facturacion-db
  template:
    metadata:
      labels:
        app: facturacion-db
    spec:
      containers:
        - name: postgres
          image: postgres:18-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "$(POSTGRES_USER)"]
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: facturacion-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: facturacion-db
  namespace: facturacion
spec:
  selector:
    app: facturacion-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
