k8s-manifests/login-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-app
  namespace: facturacion
spec:
  replicas: 2
  selector:
    matchLabels:
      app: login-app
  template:
    metadata:
      labels:
        app: login-app
    spec:
      containers:
        - name: login-app
          image: jesuscoto/login-app:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: login-app
  namespace: facturacion
spec:
  selector:
    app: login-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-app
  namespace: facturacion
spec:
  ingressClassName: nginx
  rules:
    - host: tudominio.com   # cambia por tu dominio real
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-app
                port:
                  number: 80
